[package]
name = "eth-vanity"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
