[package]
name = "eth-vanity"
version = "0.1.2"
edition = "2021"
description = "Fast Ethereum vanity address miner. Supports wallet addresses, CREATE, and CREATE2."
license = "MIT"
repository = "https://github.com/zemse/eth-vanity"
keywords = ["ethereum", "vanity", "address", "create2", "crypto"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
alloy-primitives = "0.8"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
rand_core = { version = "0.6", features = ["getrandom"] }
k256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
